--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # Resources
 resources/*
-cpoulet/*
+cpoulet
+
+# Targets
+*.filler
+show-filler
+!show-filler/*
+filler.trace
 
 # Prerequisites
 *.d
